[gd_scene load_steps=2 format=3 uid="uid://mainmenu"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.98, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LogoContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PlayTapLogo" type="TextureRect" parent="VBoxContainer/LogoContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 60)
size_flags_vertical = 3

[node name="WayangMascot" type="AnimatedSprite2D" parent="VBoxContainer/LogoContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="GameGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15

[node name="TapPopButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="DragMatchButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="MemoryFlipButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="PianoHewanButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="FingerPaintButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="ShapeSilhouetteButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="ColoringBookButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="MusicRhythmButton" type="Button" parent="VBoxContainer/GameGrid"]
layout_mode = 2
custom_minimum_size = Vector2(120, 120)

[node name="BottomBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="TapCountLabel" type="Label" parent="VBoxContainer/BottomBar"]
layout_mode = 2
text = "Main 0x hari ini"

[node name="ParentButton" type="Button" parent="VBoxContainer/BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)
text = "âš™"
